--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "styled-components": "^5.3.3"
+    "next": "12.0.10",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
