--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "webp-loader": "^0.6.0"
   },
   "devDependencies": {
+    "@types/react": "^18.0.1",
     "autoprefixer": "^10.4.4",
     "babel-plugin-styled-components": "^2.0.2",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
     "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.23"
+    "tailwindcss": "^3.0.23",
+    "typescript": "^4.6.3"
   },
   "resolutions": {
     "styled-components": "^5"
