--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
   },
   "dependencies": {
     "next": "12",
-    "next-optimized-images": "^2.6.2",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "webp-loader": "^0.6.0"
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
+    "@types/node": "^17.0.36",
     "@types/react": "^18.0.1",
     "autoprefixer": "^10.4.4",
     "babel-plugin-styled-components": "^2.0.2",
