--- a/package.json
+++ b/package.json
@@ -8,19 +8,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^2.1.2",
+    "@mdx-js/react": "^2.1.2",
+    "@next/mdx": "^12.2.3",
+    "esbuild": "^0.14.51",
     "next": "12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.4",
     "@types/node": "^17.0.36",
     "@types/react": "^18.0.1",
-    "autoprefixer": "^10.4.4",
+    "autoprefixer": "^10.4.8",
     "babel-plugin-styled-components": "^2.0.2",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
-    "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.23",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.7",
     "typescript": "^4.6.3"
   },
   "resolutions": {
