looks for and automatically generates blog page and individual posts

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@mdx-js/react": "^2.1.2",
     "@next/mdx": "^12.2.3",
     "esbuild": "^0.14.51",
+    "gray-matter": "^4.0.3",
     "next": "12",
+    "next-mdx-remote": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
