--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "12",
     "next-mdx-remote": "^4.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.4",
