--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mdx-js/loader": "^2.1.2",
-    "@mdx-js/react": "^2.1.2",
     "@next/mdx": "^12.2.3",
     "esbuild": "^0.14.51",
     "gray-matter": "^4.0.3",
@@ -31,12 +29,10 @@
     "tailwindcss": "^3.1.7",
     "typescript": "^4.6.3"
   },
-  "resolutions": {
-    "styled-components": "^5"
-  },
+  "resolutions": {},
   "version": "1.0.0",
   "description": "Personal website for Brian Colclough",
-  "main": "index.js",
+  "main": "index.tsx",
   "repository": "https://github.com/BrianColclough/Portfolio.git",
   "author": "Brian Colclough <brianmcolclough@gmail.com>",
   "license": "MIT"
